--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,10 @@
 name: release
 
 on:
+  workflow_dispatch:
   release:
-    types: [published]
+    types: [created]
+
 
 jobs:
   releases-matrix:
